# screenly-ose

./: requirements.txt  settings.py  setup.cfg  viewer.py
lib/: raspberry_pi_helper.py  utils.py
requirements/: requirements.txt
tests/: viewer_test.py
webview/: README.md
webview/src/: main.cpp  mainwindow.cpp
