

[metadata]
name = lib-Farstack
version = 0.0.1
author = Screenly
author_email = author@example.com
description = Screenly lib
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6


